test/classes/nilability/errors/cast-nil-to-generic-3.good
cast-nil-to-generic-3.chpl:25: In method 'fetchone':
cast-nil-to-generic-3.chpl:27: error: illegal cast from nil to a generic shared type
